[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-oauth2"
version = "0.3.1"
authors = [
  { name="Ilya Zverev", email="ilya@zverev.info" },
]
description = "Helper library for OAuth2 in command-line tools"
keywords = ["oauth", "oauth2", "cli", "command line"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "requests-oauthlib",
    "platformdirs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/Zverik/cli-oauth2"
"Bug Tracker" = "https://github.com/Zverik/cli-oauth2/issues"

[project.scripts]
oauthclean = "oauthcli.clean:main"
